ascending order functionality - done

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                 </div>
                 <div class="card-action">
                     <h5 id="task-title">List of Tasks</h5>
+                    <label>Date order</label>
+                    <select id = "order-choice">
+                        <option value = "ascend">Ascending</option>
+                        <option value = "descend">Descending</option>
+                    </select>
                     <div class="input-field col s12">
                         <input type="search" name="filter" id="filter">
                         <label for="filter">Search</label>
